# cryptocamp

./: Cargo.toml
src/week01/: ex01_fast_exp.rs  ex02_fermat.txt  ex03_fermat.rs  ex04_elgamal.rs
src/week02/secp/: ex.rs
