[package]
name = "cryptocamp"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"


[[bin]]
name = "w01_ex01"
path = "src/week01/ex01_fast_exp.rs"

[[bin]]
name = "w01_ex03"
path = "src/week01/ex03_fermat.rs"

[[bin]]
name = "w01_ex04"
path = "src/week01/ex04_elgamal.rs"

[[bin]]
name = "w02_secp"
path = "src/week02/secp/ex.rs"
